# AtlasCreator

./: .gitignore  Launch AtlasCreator.command  README.md  pyproject.toml
atlas_creator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: index.md  video_to_spritesheet_mvp.md
src/: __init__.py  app_state.py  main.py  models.py
src/services/: __init__.py  atlas_service.py  background_service.py  image_service.py  tooling_service.py  video_service.py
src/ui/: __init__.py  main_window.py  spritesheet_preview_dialog.py  workers.py
tests/: test_atlas_service.py  test_background_service.py  test_image_service.py  test_integration_pipeline.py  test_ui_smoke.py  test_video_service.py
